BREAKING CHANGE: Replace player name-based system with UUID-based system
The system has been refactored to use UUIDs instead of player names as the primary identifier for players. This change was made to ensure consistent and unique identification of players, even if they change their display names.